# qix

./: pyproject.toml
qix/: main.py  main2.py  requirements.txt
